<resources>
    <string name="app_name">Running</string>
    <string name="login">LOG IN</string>
    <string name="register">REGISTER</string>
    <string name="user">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="correctPasswd">7</string>
    <string name="correctUsr">Erox</string>
    <string name="title_activity_maps">Map</string>
    <string name="wifi_connected">Wifi is connected</string>
    <string name="network_connected">Using personal network</string>
    <string name="lost_connection">ConnectionLost</string>
    <string name="settings">Settings</string>
    <string name="refresh">Refresh</string>
    <string name="action_settings">Settings</string>
    <string name="mobile_data">Mobile data connected</string>
    <string name="profile">Profile</string>
    <string name="music">Music</string>
    <string name="groups">Groups</string>
    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core         functionality.</string>
    <string name="StartRunning">Start Running</string>
    <string name="origin">Origin</string>
    <string name="destiny">Destination</string>
    <string name="noPositionClicked">You need to click a position where to run.</string>
    <string name="StopRunning">Stop Running</string>
    <string name="forcedStop">Stop before reaching the goal</string>
    <string name="itsMe">YOU ARE HERE</string>
    <string name="endOfTheroad">You reached your goal!</string>
    <string name="askShowPassword">Show password characters?</string>
    <string name="title_register">Register Phse</string>
    <string name="authFail">Authentication Failed</string>
    <string name="authSuccs">Authenticated Correctly</string>
    <string name="missInformation">Missing email or password.</string>
    <string name="invalidMail">Introduce a valid email.</string>
    <string name="rToMap">Return To Map</string>
    <string name="noResults">No Results Found</string>
    <string name="Result">Result</string>
    <string name="name">Name</string>
    <string name="email">E-Mail</string>
    <string name="Time">Time</string>
    <string name="about_us">About us</string>
    <string name="user_profile" />
    <string name="email_adress">Email adress:</string>
    <string name="location_lleida">Location: Lleida</string>
    <string name="edit_variables">Edit Profile</string>
    <string name="change">Change</string>
    <string name="gToServer">Go to Server</string>

</resources>
